--- a/style.css
+++ b/style.css
@@ -298,9 +298,11 @@ footer {
 
 .fade-up {
   opacity: 0;
-  transform: translateY(40px);
-  transition: 1s;
+  transform: translateY(60px);
+  transition: opacity 1s ease, transform 1s ease;
+  will-change: opacity, transform;
 }
+
 
 .fade-up.show {
   opacity: 1;
